# AP1Project3

./: CMakeLists.txt  README.md  makefile
Client/: ClientSocket.cpp  ClientSocket.h  ClientValidation.cpp  ClientValidation.h  UserVectorInput.cpp  UserVectorInput.h  a.out  main.cpp  makefile
Server/: main.cpp  makefile
Server/Distances/: AbstractDistance.h
Server/flowAndData/: DataProcessing.cpp  DataProcessing.h  FileReader.cpp  FileReader.h  KnnAlgorithm.cpp  KnnAlgorithm.h  RelativeVector.cpp  RelativeVector.h  ServerSocket.cpp  ServerSocket.h  ServerValidations.cpp  ServerValidations.h
